Nouvel Activity et login fnel

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,9 +15,9 @@ appiumURL=http://127.0.0.1:4723/wd/hub
 #Native Apps
 #Android
 androidAutomationName=UiAutomator2
-androidAppPackage=com.swaglabsmobileapp
-androidAppActivity=com.swaglabsmobileapp.SplashActivity
-androidAppLocation=app/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
+androidAppPackage=com.carrefour.fid.android
+androidAppActivity=com.carrefour.fid.android.navigation.BottomNavActivity
+androidAppLocation=app/Carrefour.apk
 
 #iOS
 iOSAutomationName=XCUITest
@@ -40,7 +40,7 @@ override_reports=yes
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package com.appium.java_Mail_API.EmailConfig;
 #This Email will be sent using Java mail API 
-send_email_to_users=no
+send_email_to_users=yes
 
 #PassedStepsScreenshot --> yes or no
 passed_steps_screenshot=yes 
@@ -53,4 +53,4 @@ skipped_steps_screenshot=yes
 
 #retry failed test cases -> yes or no 
 #It will try for 1 time if any Test case gets failed
-retry_failed_tests=yes
+retry_failed_tests=no
