--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -40,7 +40,7 @@ override_reports=yes
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package com.appium.java_Mail_API.EmailConfig;
 #This Email will be sent using Java mail API 
-send_email_to_users=yes
+send_email_to_users=no
 
 #PassedStepsScreenshot --> yes or no
 passed_steps_screenshot=yes 
